--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Anastsia Shkyrta</title>
+    <title>Anastasia Shkyrta</title>
   </head>
   <body>
     <header>
