block men_collection done

--- a/index.html
+++ b/index.html
@@ -379,10 +379,9 @@
 
     <!-- "About us" block-->
 
-    <div class="about_block container-fluid d-flex justify-content-between">
-      <div class="ellips mt-5"></div>
-      <div class="main_content row">
-        <div class="col-6 d-flex align-items-center">
+    <div class="about_block container-fluid d-flex justify-content-center">
+      <div class="main_content container p-0 row">
+        <div class="col-6 d-flex justify-content-between">
           <div class="text_block m-auto">
             <h4>ABOUT US</h4>
             <p>
@@ -414,18 +413,162 @@
           </div>
         </div>
         <div class="col-6 d-flex align-items-center">
-          <img src="./img/author.jfif" alt="pic" class="picture m-auto" />
+          <img src="./img/author.jfif" alt="pic" class="picture m-auto me-0" />
         </div>
       </div>
     </div>
 
     <div class="men_collection container-fluid">
-      <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6"></div>
-      </div>
-      <div class="row">
-        <div class="col-12"></div>
+      <div class="container p-0">
+        <!-- In this part are two cards and text -->
+        <div class="row">
+          <div class="col-12 mt-5">
+            <div class="card_part d-flex justify-content-between">
+              <div class="text_part">
+                <a href="#" class="mt-5 me-5 btn shadow-none"
+                  >Show More<img
+                    class="ms-3"
+                    src="./icons/Larrow.svg"
+                    style="width: 50px; height: 50px; transform: rotate(180deg)"
+                    alt="arrow"
+                /></a>
+                <h3>Men's</h3>
+                <p>
+                  Fine jewelry for his everyday. A collection for the friends,
+                  best friends, and partners in our lives.Fine jewelry for his
+                  everyday. A collection for the friends, best friends, and
+                  partners in our lives.<br />
+                  Fine jewelry for his everyday. A collection for the friends,
+                  best friends, and partners in our lives.Fine jewelry for his
+                  everyday.
+                </p>
+              </div>
+              <a class="card d-block" href="#">
+                <div
+                  class="pic"
+                  style="
+                    background-image: url(./img/mens_ring_onyxsquaresignet.jpg);
+                  "
+                ></div>
+                <div class="card-body d-flex p-0 pb-4">
+                  <h5 class="card-title mb-0 me-5">Onyx Ring</h5>
+                  <p class="price m-0 pt-3">$260</p>
+
+                  <img
+                    class="ms-4 mt-3"
+                    src="./icons/Larrow.svg"
+                    style="width: 30px; height: 30px; transform: rotate(180deg)"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
+
+              <a class="card d-block" href="#">
+                <div
+                  class="pic"
+                  style="background-image: url(./img/Mens_titanium_ring.jpg)"
+                ></div>
+                <div class="card-body d-flex p-0 pb-4">
+                  <h5 class="card-title mb-0 me-5">Titanium Ring</h5>
+                  <p class="price m-0 pt-3">$240</p>
+
+                  <img
+                    class="ms-4 mt-3"
+                    src="./icons/Larrow.svg"
+                    style="width: 30px; height: 30px; transform: rotate(180deg)"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- Here are four cards -->
+        <div class="row">
+          <div class="col-12 mt-5">
+            <div
+              class="cards_only d-flex mb-5 justify-content-between flex-wrap"
+            >
+              <a class="card d-block" href="#">
+                <div
+                  class="pic"
+                  style="
+                    background-image: url(./img/Mens_bracelet_boxChain.jpg);
+                  "
+                ></div>
+                <div class="card-body d-flex p-0 pb-4">
+                  <h5 class="card-title mb-0 me-5">Chain Bracelet</h5>
+                  <p class="price m-0 pt-3">$320</p>
+
+                  <img
+                    class="ms-4 mt-3"
+                    src="./icons/Larrow.svg"
+                    style="width: 30px; height: 30px; transform: rotate(180deg)"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
+
+              <a class="card d-block" href="#">
+                <div
+                  class="pic"
+                  style="
+                    background-image: url(./img/Mens_bracelet_gunmetal.jpg);
+                  "
+                ></div>
+                <div class="card-body d-flex p-0 pb-4">
+                  <h5 class="card-title mb-0 me-5">Gunmetal Bracelet</h5>
+                  <p class="price m-0 pt-3">$160</p>
+
+                  <img
+                    class="ms-4 mt-3"
+                    src="./icons/Larrow.svg"
+                    style="width: 30px; height: 30px; transform: rotate(180deg)"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
+
+              <a class="card d-block" href="#">
+                <div
+                  class="pic"
+                  style="
+                    background-image: url(./img/MensTag_Cable_necklace.jpg);
+                  "
+                ></div>
+                <div class="card-body d-flex p-0 pb-4">
+                  <h5 class="card-title mb-0 me-5">Cable Necklace</h5>
+                  <p class="price m-0 pt-3">$225</p>
+
+                  <img
+                    class="ms-4 mt-3"
+                    src="./icons/Larrow.svg"
+                    style="width: 30px; height: 30px; transform: rotate(180deg)"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
+
+              <a class="card d-block" href="#">
+                <div
+                  class="pic"
+                  style="background-image: url(./img/UnisexCurb_necklace.jpg)"
+                ></div>
+                <div class="card-body d-flex p-0 pb-4">
+                  <h5 class="card-title mb-0 me-5">Curb Necklace</h5>
+                  <p class="price m-0 pt-3">$240</p>
+
+                  <img
+                    class="ms-4 mt-3"
+                    src="./icons/Larrow.svg"
+                    style="width: 30px; height: 30px; transform: rotate(180deg)"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
