started a new page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="#">FOR HER</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT US</a>
+                <a class="nav-link" href="#about_us">ABOUT US</a>
               </li>
             </ul>
             <ul class="navbar-nav mb-lg-0 ms-auto me-5">
@@ -148,7 +148,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row d-flex justify-content-around mt-5">
-                <a class="card col-4 d-block" href="#">
+                <a class="card col-4 d-block" href="./hero_product.html">
                   <div
                     class="pic"
                     style="background-image: url(./img/BoldHoops.jpg)"
@@ -169,7 +169,7 @@
                     />
                   </div>
                 </a>
-                <a class="card col-4 d-block" href="#">
+                <a class="card col-4 d-block" href="./hero_product.html">
                   <div
                     class="pic"
                     style="background-image: url(./img/DailyMiniHoops.jpg)"
@@ -190,7 +190,7 @@
                     />
                   </div>
                 </a>
-                <a class="card col-4 d-block" href="#">
+                <a class="card col-4 d-block" href="./hero_product.html">
                   <div
                     class="pic"
                     style="background-image: url(./img/BostonDomeHoops.jpg)"
@@ -378,10 +378,14 @@
     </div>
 
     <!-- "About us" block-->
-    <div class="about_block container-fluid d-flex justify-content-center">
-      <div class="main_content container p-0 row">
-        <div class="col-6 d-flex justify-content-between">
-          <div class="text_block m-auto">
+    <div class="about_block container-fluid " id="about_us">
+      <div class="main_content container  p-0 ">
+        <div class="row 
+        flex-md-wrap
+        d-flex
+        justify-content-center
+        align-content-center">
+          <div class="text_block m-auto col-6 col-md-12">
             <h4>ABOUT US</h4>
             <p>
               Based in London’s jewellery district Hatton Garden, Matthew Calvin
@@ -410,9 +414,9 @@
               jewellery design.
             </p>
           </div>
-        </div>
-        <div class="col-6 d-flex align-items-center">
-          <img src="./img/author.jfif" alt="pic" class="picture m-auto me-0" />
+          <div class="col-6 col-md-12">
+            <img src="./img/author.jfif" alt="pic" class="picture " />
+          </div>
         </div>
       </div>
     </div>
@@ -596,8 +600,8 @@
         
           <h3 class="mt-5">Mirella</h3>
         </div>
-        <!-- Column 1 social media-->
         <div class="row">
+          <!-- Column 1 social media-->
           <div class="col-4" ">
             <div class="text d-flex flex-column mt-3 ">
               <h4>COMPANY</h4>
@@ -624,7 +628,7 @@
                 <a href="#">
                   <img
                     src="./icons/facebook.svg"
-                    alt="insta"
+                    alt="facebook"
                     style="width: 30px; height: 30px"
                   />
                 </a>
@@ -633,7 +637,7 @@
                 <a href="#">
                   <img
                     src="./icons/twitter.svg"
-                    alt="insta"
+                    alt="twitter"
                     style="width: 30px; height: 30px"
                   />
                 </a>
@@ -642,7 +646,7 @@
                 <a href="#">
                   <img
                     src="./icons/pinterest.svg"
-                    alt="insta"
+                    alt="pinterest"
                     style="width: 30px; height: 30px"
                   />
                 </a>
@@ -666,7 +670,7 @@
               <h3>Have some questions? </h3>
               <h3>Write your e-mail and get the answers ...</h3>
          
-              <input type="text" placeholder="Enter your e-mail ..." />
+              <input type="email" placeholder="Enter your e-mail ..." />
 
               <button class="btn shadow-none m-auto d-block mb-5">
                 GET IT
