--- a/hero_product.html
+++ b/hero_product.html
@@ -74,10 +74,7 @@
     <header class="container-fluid">
       <div class="row front_page p-0">
         <!-- Col with photos -->
-        <div
-          class="col-7 photos d-flex flex-wrap"
-          style="background-color: cadetblue"
-        >
+        <div class="col-7 photos d-flex flex-wrap mt-5">
           <div
             class="photo"
             style="background-image: url('./img/Hero_Front.jpg')"
@@ -101,14 +98,19 @@
           <div class="photo"></div>
         </div>
         <!-- Col with description -->
-        <div
-          class="col-5 d-flex flex-column"
-          style="background-color: rgb(112, 95, 160)"
-        >
+        <div class="col-5 d-flex flex-column mt-4 pe-3">
           <div class="txt">
             <h2>Daily Stacker Ring - $95</h2>
+            <div class="stars d-flex">
+              <div class="star"></div>
+              <div class="star"></div>
+              <div class="star"></div>
+              <div class="star"></div>
+              <div class="star"></div>
+            </div>
             <hr />
             <h3>Description</h3>
+
             <p>
               A satisfyingly endless design, the Hitch Ring features
               back-to-back high polish capsules. Wear this distinctive chunky
@@ -116,8 +118,8 @@
               Collection to create contrast.
             </p>
             <hr />
-            <span>Ring size</span>
-            <div class="sizes d-flex">
+            <h3 class="alt">Ring size</h3>
+            <div class="sizes">
               <a href="#">4</a>
               <a href="#">5</a>
               <a href="#">6</a>
@@ -126,8 +128,11 @@
               <a href="#">9</a>
             </div>
           </div>
-          <button class="btn">ADD TO BAG</button>
+
+          <button class="btn add_btn shadow-none">ADD TO BAG</button>
+
           <hr />
+
           <div class="propositions">
             <ul>
               <li>
