--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand ms-5" href="#"
+          <a class="navbar-brand ms-5" href="./index.html"
             ><img
               src="./icons/logo.svg"
               style="width: 70px; height: 70px"
