--- a/hero_product.html
+++ b/hero_product.html
@@ -95,7 +95,16 @@
             class="photo"
             style="background-image: url('./img/Hero_5.jpg')"
           ></div>
-          <div class="photo"></div>
+          <div class="photo">
+            <video
+              class="p-0 m-0"
+              src="./img/Hero_video.mp4"
+              style="width: 350px; height: 350px"
+              autoplay
+              muted
+              loop
+            ></video>
+          </div>
         </div>
         <!-- Col with description -->
         <div class="col-5 d-flex flex-column mt-4 pe-3">
