--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
 
             <div class="carousel-item">
-              <div class="row d-flex justify-content-around mt-5 pt-5">
+              <div class="row d-flex justify-content-around mt-5">
                 <a class="card col-4 d-block" href="#">
                   <div
                     class="pic"
@@ -283,7 +283,7 @@
             </div>
 
             <div class="carousel-item">
-              <div class="row d-flex justify-content-around mt-5 pt-5">
+              <div class="row d-flex justify-content-around mt-5 ">
                 <a class="card col-4 d-block" href="#">
                   <div
                     class="pic"
