index and main adaptation

--- a/all_goods.html
+++ b/all_goods.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <nav
-      class="navbar navbar-expand-lg navbar-light fixed-top"
+      class="navbar navbar-expand-lg navbar-dark fixed-top"
       id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand ms-5"
@@ -32,13 +32,14 @@
           data-bs-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02"
           aria-expanded="false"
-          aria-label="Toggle navigation">
+          aria-label="Toggle navigation"
+          style="border: none;">
           <span class="navbar-toggler"
             style="color: black; z-index: 2"></span>
         </button>
         <div class="collapse navbar-collapse"
           id="navbarTogglerDemo02">
-          <ul class="navbar-nav mb-lg-0 ms-auto">
+          <ul class="navbar-nav fill d-flex text-align-end align-items-end mb-lg-0 ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#">ALL
                 COLLECTIONS</a>
@@ -54,7 +55,7 @@
                 US</a>
             </li>
           </ul>
-          <ul class="navbar-nav mb-lg-0 ms-auto me-5">
+          <ul class="navbar-nav fill d-flex text-align-end align-items-end mb-lg-0 ms-auto me-5">
 
           <li class="nav-item">
               <a class="nav-link mt-1 " href="#"><img
