--- a/hero_product.html
+++ b/hero_product.html
@@ -15,9 +15,9 @@
     <title>Mirella | Product</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand ms-5" href="#"
+        <a class="navbar-brand ms-5 " href="./index.html"
           ><img
             src="./icons/logo.svg"
             style="width: 70px; height: 70px"
@@ -31,11 +31,12 @@
           aria-controls="navbarTogglerDemo02"
           aria-expanded="false"
           aria-label="Toggle navigation"
+          style="border: none;"
         >
-          <span class="navbar-toggler" style="color: black; z-index: 2"></span>
+          <span class="navbar-toggler" ></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mb-lg-0 ms-auto">
+          <ul class="navbar-nav fill d-flex text-align-end align-items-end mb-lg-0 ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#">ALL COLLECTIONS</a>
             </li>
@@ -49,7 +50,7 @@
               <a class="nav-link" href="./index.html">ABOUT US</a>
             </li>
           </ul>
-          <ul class="navbar-nav mb-lg-0 ms-auto me-5">
+          <ul class="navbar-nav fill d-flex text-align-end align-items-end mb-lg-0 ms-auto me-5">
 
             <li class="nav-item">
               <a class="nav-link mt-1 " href="#"><img
