adaptation of footer

--- a/all_goods.html
+++ b/all_goods.html
@@ -666,7 +666,7 @@
       </div>
       <div class="row">
         <!-- Column 1 social media-->
-        <div class="col-4" ">
+        <div class="col-lg-4 col-6" >
               <div class=" text d-flex flex-column mt-3 ">
                 <h4>COMPANY</h4>
                 <span>Our Mission</span>
@@ -706,7 +706,7 @@
         </div>
       </div>
       <!-- Column 2 -->
-      <div class="col-4" ">
+      <div class="col-lg-4 col-5" >
               <div class=" text d-flex flex-column mt-3">
         <h4>SUPPORT</h4>
         <span>Virtual Shopping</span>
@@ -716,8 +716,8 @@
         <span>Accessibility</span>
       </div>
     </div>
-    <!-- Column 3 input and social media -->
-    <div class="col-4" ">
+    <!-- Column 3 input -->
+    <div class="col-lg-4 col-1 asking" >
               <div class=" elements mt-3 d-flex flex-column
       align-items-center">
       <h3>Have some questions? </h3>
