--- a/hero_product.html
+++ b/hero_product.html
@@ -371,7 +371,7 @@
         </div>
         <div class="row">
           <!-- Column 1 social media-->
-          <div class="col-4" ">
+          <div class="col-lg-4 col-6" >
             <div class="text d-flex flex-column mt-3 ">
               <h4>COMPANY</h4>
               <span>Our Mission</span>
@@ -423,7 +423,7 @@
             </div>
           </div>
           <!-- Column 2 -->
-          <div class="col-4" ">
+          <div class="col-lg-4 col-5" >
             <div class="text d-flex flex-column mt-3">
               <h4>SUPPORT</h4>
               <span>Virtual Shopping</span>
@@ -433,8 +433,8 @@
               <span>Accessibility</span>
             </div>
           </div>
-          <!-- Column 3 input and social media -->
-          <div class="col-4" ">
+          <!-- Column 3 input -->
+          <div class="col-lg-4 col-1 asking">
             <div class="elements mt-3 d-flex flex-column align-items-center">
               <h3>Have some questions? </h3>
               <h3>Write your e-mail and get the answers ...</h3>
