--- a/all_goods.html
+++ b/all_goods.html
@@ -23,19 +23,16 @@
       class="navbar navbar-expand-lg navbar-dark fixed-top"
       id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand ms-5"
-          href="./index.html"><img src="./icons/logo.svg"
-            style="width: 70px; height: 70px"
-            alt="logo" /></a>
-        <button class="navbar-toggler" type="button"
+        <a class="navbar-brand ms-md-5 ms-sm-2"
+          href="./index.html"><img src="./icons/logo.svg" alt="logo" /></a>
+        <button class="navbar-toggler navbar-light shadow-none" type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02"
           aria-expanded="false"
           aria-label="Toggle navigation"
           style="border: none;">
-          <span class="navbar-toggler"
-            style="color: black; z-index: 2"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse"
           id="navbarTogglerDemo02">
@@ -47,12 +44,13 @@
             <li class="nav-item">
               <a class="nav-link" href="#">FOR HIM</a>
             </li>
+            
             <li class="nav-item">
-              <a class="nav-link" href="#">FOR HER</a>
+              <a class="nav-link" href="./index.html#about_us">ABOUT
+                US</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">ABOUT
-                US</a>
+              <a class="nav-link" href="./index.html#gift">RECIVE A GIFT</a>
             </li>
           </ul>
           <ul class="navbar-nav fill d-flex text-align-end align-items-end mb-lg-0 ms-auto me-5">
@@ -65,7 +63,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link btn shadow-none mb-1  " href="#"  data-bs-toggle="modal" data-bs-target="#SignIn  "><img
+              <a class="nav-link btn shadow-none  " href="#"  data-bs-toggle="modal" data-bs-target="#SignIn  "><img
                   src="./icons/customer.png"
                   style="width: 35px; height: 35px"
                   alt="account" /></a>
@@ -516,7 +514,7 @@
   </div>
 
   <!-- For him -->
-  <div class="container-md main_block mb-5">
+  <div class="container-md main_block mb-5" id="for_him">
     <div class="topic" style="margin-top: 50px">
       <h3>For<i style="color: transparent;">_</i>Him</h3>
       <span></span>
