--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       class="navbar navbar-expand-lg navbar-dark fixed-top"
       id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand ms-5"
+        <a class="navbar-brand ms-md-5 ms-sm-2 "
           href="./index.html"><img src="./icons/logo.svg"
-            style="width: 70px; height: 70px"
             alt="logo" /></a>
         <button
           class="navbar-toggler text-align-end navbar-light shadow-none"
@@ -47,15 +46,15 @@
                 COLLECTIONS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">FOR HIM</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">FOR HER</a>
+              <a class="nav-link" href="./all_goods.html#for_him">FOR HIM</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about_us">ABOUT
                 US</a>
-            </li>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#gift">RECIVE A GIFT</a>
+              </li>
           </ul>
           <ul
             class="navbar-nav fill d-flex text-align-end align-items-end mb-lg-0 ms-auto me-5">
@@ -69,7 +68,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link btn shadow-none mb-1  "
+              <a class="nav-link btn shadow-none "
                 href="#" data-bs-toggle="modal"
                 data-bs-target="#SignIn  "><img
                   src="./icons/customer.png"
@@ -149,7 +148,7 @@
       <!-- Carousel -->
       <div id="carouselExampleIndicators"
         class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators m-0 mb-3">
+        <div class="carousel-indicators m-0 mb-3 mt-3">
           <button type="button"
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide-to="0" class="active indicator"
@@ -167,7 +166,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div
-              class="row d-flex justify-content-around mt-5">
+              class="row d-flex justify-content-around align-items-center mt-5">
               <a class="card col-4 d-block"
                 href="./hero_product.html">
                 <div class="pic"
@@ -368,8 +367,8 @@
   </div>
 
   <!-- "About us" block-->
-  <div class="about_block container-fluid " id="about_us">
-    <div class="main_content container  p-0 ">
+  <div class="about_block container-fluid " >
+    <div class="main_content container  p-0 " id="about_us">
       <div class="row 
         flex-wrap
         d-flex
@@ -449,7 +448,7 @@
         <div class="row">
           <div class="col-12 mt-5">
             <div
-              class="cards_only d-flex mb-5 justify-content-between flex-wrap">
+              class="cards_only d-flex mb-5 justify-content-between flex-wrap align-items-center">
               <a class="card d-block"
                 href="./hero_product.html">
                 <div class="pic" style="
@@ -611,7 +610,8 @@
         d-flex
         justify-content-center
         align-items-center
-      ">
+      "
+      id="gift">
     <div class="elements d-flex align-items-center flex-column" >
       <h3>Recive your -20% off gift</h3>
       <input type="text"
